# xf86-video-fbturbo

./: .cvsignore  .gitignore  .travis.yml  COPYING  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  xorg.conf
man/: Makefile.am  Makefile.in  fbdev.man  fbturbo.man  sunxifb.man
src/: Makefile.am  Makefile.in  aarch64_asm.S  arm_asm.S  backing_store_tuner.c  backing_store_tuner.h  cpu_backend.c  cpu_backend.h  cpuinfo.c  cpuinfo.h  fb_copyarea.c  fb_copyarea.h  fbdev.c  fbdev_priv.h  interfaces.h  sunxi_disp.c  sunxi_disp.h  sunxi_disp_hwcursor.c  sunxi_disp_hwcursor.h  sunxi_mali_ump_dri2.c  sunxi_mali_ump_dri2.h  sunxi_video.c  sunxi_video.h  sunxi_x_g2d.c  sunxi_x_g2d.h  sw-exa.c  sw-exa.h
test/: Makefile.am  Makefile.in  gles-rgb-cycle-demo.c  gles-yellow-blue-flip.c  sunxi_disp_vsync_demo.c  sunxi_g2d_bench.c
